# ode_prototyping

./: .clangd  .gitignore  CMakeLists.txt  README.md
NumericalRecipes/test/: VanDerPolTest.cpp
scripts/: animate_states.py  caching.py  energy.py  energy_conservation_plot.py  generate_ode_test_data.py  nbody_io.py  parallel_energy_test.py  plot_benchmark.py  plot_conserved_quantities.py  plot_err_by_n_sof_and_tol.py  plot_n_body_states.py
scripts/nbody_io/: bin_reader.py  caching.py
src/: CMakeLists.txt  Dopr853_constants.hpp  ODEIntegrator.cpp  ODEIntegrator.hpp  Output.hpp  StepperBase.hpp  StepperDopr5.hpp  StepperDopr853.hpp  ode.cpp  ode.hpp
src/ButcherTableaus/: BTDOPRI5.hpp  BTHE21.hpp  BTRKF45.hpp  CMakeLists.txt
src/NumericalRecipes/test/: StepperDopr853_test.cpp
src/ParallelExecutor/: AtomicUtil.hpp  CMakeLists.txt  CudaErrorCheck.cuh  CudaExecutor.cuh  CudaState.cuh  HeapState.hpp  NBodyODE.hpp  ParallelExecutor.hpp  ParallelThreadPool.hpp  RKEmbeddedParallel.hpp  SingleThreadedExecutor.hpp  StateUtils.hpp  cuda_n_body.cu  n_body.cpp
src/ParallelExecutor/demos/: CMakeLists.txt  n_body.cpp
src/ParallelExecutor/ode/: CMakeLists.txt  ExponentialODE.hpp  NBodyODE.hpp  VanDerPolODE.hpp
src/ParallelExecutor/output/: CMakeLists.txt  RawOutput.hpp
src/ParallelExecutor/par_exec/: CMakeLists.txt  ParallelExecutor.hpp  ParallelThreadPool.hpp  SingleThreadedExecutor.hpp  ThreadPoolExecutor.hpp
src/ParallelExecutor/state/: CMakeLists.txt  CudaState.cuh
src/ParallelExecutor/test/: CMakeLists.txt  CudaRKEmbeddedTest.cu  CudaStateTest.cu  ExponentialTest.hpp  NBodyTest.hpp  ParallelRKEmbeddedTest.cpp  SingleThreadedRKEmbeddedTest.cpp  VanDerPolTest.hpp
src/ParallelExecutor/util/: CMakeLists.txt
src/RKEmbedded/: AllocatedState.hpp  CMakeLists.txt  DOPRI5.hpp  DVERK.hpp  HE21.hpp  ODEState.hpp  RKEmbedded.hpp  RKF45.hpp  RKF78.hpp  RawOutput.hpp  SingleThreadedIntegrator.hpp  VectorState.hpp  main.cpp  n_body.cpp
src/RKEmbedded/test/: CMakeLists.txt  DOPRI5Test.cpp  DVERKTest.cpp  HE21Test.cpp  RKF45Test.cpp  RKF78Test.cpp
src/RKEmbeddedCuda/: CMakeLists.txt  CUDAExpODE.cuh  CUDANBodyODE.cuh  CudaExpOde.cuh  CudaNBodyOde.cuh  CudaState.cuh  CudaUtils.cuh  HostUtils.hpp  RKEmbeddedCuda.cuh  RawCudaOutput.cuh  n_body.cu
src/RKEmbeddedCuda/test/: CMakeLists.txt  CudaNBodyBenchmark.cu  CudaNBodyTest.cu  CudaRKEmbeddedCPUComparisonTest.cu  CudaRKEmbeddedConsistencyTest.cu  CudaStateTest.cu  CudaUtilsTest.cu  RKEmbeddedCudaTest.cu
src/benchmark/: CMakeLists.txt  n_body_benchmark.cu
src/butcher_tableaus/: BTDVERK.hpp  BTRKF78.hpp  CMakeLists.txt
src/cuda_util/: CMakeLists.txt
src/demo/: CMakeLists.txt  cuda_n_body.cu  cuda_n_body_box.cu  cuda_n_body_leapfrog.cu  n_body.cpp  n_body_benchmark_test.cu  nbody_io.hpp
src/demo/n_body_scenarios/: CMakeLists.txt  ParticlesInBox.hpp  SpinningParticlesInBox.hpp
src/demos/: cuda_n_body.cu  n_body.cpp
src/integrator/: CMakeLists.txt  RKEmbeddedParallel.hpp
src/integrator/RKEmbeddedParallel/: CMakeLists.txt  RKEmbeddedParallel.hpp
src/integrator/RKEmbeddedParallel/butcher_tableaus/: BTDOPRI5.hpp  BTHE21.hpp  BTRKF45.hpp  BTRKF78.hpp
src/integrator/leapfrog/: CMakeLists.txt  LeapfrogParallel.hpp
src/ode/: CMakeLists.txt  ExponentialODE.hpp  NBodyODE.hpp  NBodySimpleODE.hpp  VanDerPolODE.hpp
src/output/: CMakeLists.txt  RawOutput.hpp  RawOutputWithLog.hpp
src/par_exec/: CudaExecutor.cuh  KernelConcepts.hpp  ParallelExecutor.hpp  SingleThreadedExecutor.hpp  ThreadPoolExecutor.hpp
src/state/: CMakeLists.txt  CudaState.cuh  HeapState.hpp  ODEState.hpp  State.hpp  StateUtils.hpp
src/test/: CMakeLists.txt  CudaExecutorTest.cu  CudaRKEmbeddedTest.cu  CudaStateTest.cu  ExponentialTest.hpp  NBodyTest.hpp  ParallelRKEmbeddedTest.cpp  SimpleOscillatorTest.cpp  SingleThreadedRKEmbeddedTest.cpp  SpinningCubeNBodyTest.hpp  StepperDopr853_test.cpp  ThreadPoolRKEmbeddedTest.cpp  VanDerPolTest.cpp  VanDerPolTest.hpp  nr_17_0_4_test.cpp  ode_test.cpp
