add_library(ParticlesInBox INTERFACE ParticlesInBox.hpp)
target_include_directories(ParticlesInBox INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})

add_library(SpinningParticlesInBox INTERFACE SpinningParticlesInBox.hpp)
target_include_directories(SpinningParticlesInBox INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
